2009-05-22  Darin Adler  <darin@apple.com>

        Reviewed by Dan Bernstein.

        - Made the global-function-resolve test independent of hashing order
          by using a fixed set of properties. This also removes the need for us
          to update this test every time we add something to the window object or
          the js-test-pre.js family of scripts.

        * fast/js/global-function-resolve-expected.txt: Updated.
        * fast/js/resources/global-function-resolve.js: Use a fixed array instead
        of using all property names from the global object; also made other small
        changes that don't have an effect on the substance of the test.

2009-05-22  Dan Bernstein  <mitz@apple.com>

        Reviewed by Darin Adler.

        - remove a test that was supposed to test the text/* change to MIME
          types from r43979, since the change was rolled out, and the test seems
          to be ineffective anyway, since it was passing on Mac after rolling
          out the change.

        * http/tests/mime/accept-all-text-types-expected.txt: Removed.
        * http/tests/mime/accept-all-text-types.html: Removed.

2009-05-22  Kenneth Rohde Christiansen  <kenneth.christiansen@openbossa.org>

        Reviewed by Simon Hausmann.

        Skip tests depending on platform dependent results.

        * platform/qt/Skipped:

2009-05-22  Shinichiro Hamaji  <hamaji@google.com>

        Reviewed by Oliver Hunt.

        Remove optimization path alpha=0 case from GraphicContext(CG|Skia).
        This optimization doesn't make sense for some composite mode (e.g., 'copy' operation).

        https://bugs.webkit.org/show_bug.cgi?id=25956

        * fast/canvas/canvas-composite-alpha-expected.txt:
        * fast/canvas/canvas-composite-alpha.html:
        * platform/gtk/fast/canvas/canvas-composite-alpha-expected.txt: Removed.

2009-05-21  Oliver Hunt  <oliver@apple.com>

        Reviewed by Maciej Stachowiak.
