@@ -1,0 +1,11 @@
+<p>
+    Test for <a href="rdar://problem/6916082">rdar://problem/6916082</a> Incorrect handling of percent sign in a CSS property value.
+</p>
+<p>
+    Parsing the color attributes in this test should not crash.
+</p>
+<UL><FONT COLOR="&-1089647509;"></UL><FONT COLOR=%>
+<script>
+    if (window.layoutTestController)
+        layoutTestController.dumpAsText();
+</script>
